added lead zeros to nums<10. Added reset

--- a/clock.html
+++ b/clock.html
@@ -12,15 +12,18 @@
 
     <strong id="thrs">00</strong>:<strong id=tmins>00</strong>:<strong id=tsecs>00</strong>
       <form>
-          Enter Time:</br>
-          Hours:
-          <input type="number" id="hrs" name="timerStartHr" min=0 max=9999 value=0>
-          Minutes:
-          <input type="number" id="mins" name="timerStartMin" maxlength="2" min=0 max=59 value=0>
-          Seconds:
-          <input type="number" id="secs" name="timerStartSec" min=0 max=59 value=0>
-          </br>
-          <input type="button" id="setTimer" value="Set Timer">
+        Enter Time:</br>
+        Hours:
+        <input type="number" id="hrs" name="timerStartHr" min=0 max=9999 value=0>
+        Minutes:
+        <input type="number" id="mins" name="timerStartMin" maxlength="2" min=0 max=59 value=0>
+        Seconds:
+        <input type="number" id="secs" name="timerStartSec" min=0 max=59 value=0>
+        
+        </br>
+      
+        <input type="button" id="setTimer" value="Set Timer">
+        <input type="button" id="reset" value="Reset">
       </form>
 
 
