--- a/home.html
+++ b/home.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width">
     <title>Jack's Site - Home</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <h1>Jack's Site</h1>
+    <input type="button"  onclick="window.location.href = 'home.html';" id="home" value="Home" class="home">
+    
   </head>
   
   <body>
-    <a href="clock.html">Clock/Timer</a>
+    <a href="timerProject/timer.html">Timer</a>
+    <a href="pathProject/path.html">Path Finder</a>
 
 
     <script src="script.js"></script>    
