Its better, shows path now

--- a/pathProject/path.html
+++ b/pathProject/path.html
@@ -13,6 +13,10 @@
     <input type="button" id="node" class="under" value="Place Node">
     <input type="button" id="wall" class="under" value="Place Wall">
     <input type="button" id="flag" class="under" value="Place Flag">
+    <input type="button" id="start" class="under" value="Start Search">
+    <input type="button" id="reset" class="under" value="Reset">
+
+    
 
     <script src="./src/grid.js"></script> 
     <script src="./src/pathScript.js"></script>    
