made it a little fancier

--- a/pathProject/path.html
+++ b/pathProject/path.html
@@ -7,15 +7,15 @@
     <link href="path.css" rel="stylesheet" type="text/css" />
   </head>
   
-  <body>
+  <body id = "b">
     <canvas id="window"></canvas>
-
-    <input type="button" id="node" class="under" value="Place Node">
-    <input type="button" id="wall" class="under" value="Place Wall">
-    <input type="button" id="flag" class="under" value="Place Flag">
-    <input type="button" id="start" class="under" value="Start Search">
-    <input type="button" id="reset" class="under" value="Reset">
-
+    <div>
+        <input type="button" id="node" class="under" value="Place Node">
+        <input type="button" id="wall" class="under" value="Place Wall">
+        <input type="button" id="flag" class="under" value="Place Flag">
+        <input type="button" id="start" class="under" value="Start Search">
+        <input type="button" id="reset" class="under" value="Reset">
+    </div>
     
 
     <script src="./src/grid.js"></script> 
