--- a/pathProject/path.html
+++ b/pathProject/path.html
@@ -26,7 +26,7 @@
     Path Length:
     <strong id="pathLength"> </strong>
 </br>
-    # of Cells Checked: 
+    # of Cells Visited: 
     <strong id="totalCells"></strong>
     
 
